fix: update css to be more responsive and rearrange buttons on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ header {
 }
 
 footer {
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: baseline;
@@ -42,11 +43,14 @@ h2 {
     font-weight: bolder;
 }
 
+#h2-404 {
+    color: #986C6A;
+}
+
 section {
-/*  max-width: 100vw;
-    margin: 10px auto; */
-    margin: 20px;
-    padding: 20px;  
+    max-width: 95vw;
+    width: 400px;
+    padding: 20px; 
     position: relative;
     display: flex;
     flex-direction: column;
@@ -64,8 +68,6 @@ li {
     margin-left: 10px;
     margin-right: 10px;
 }
-
-
 
 i {
     color: black;
@@ -122,15 +124,25 @@ form h2,
     display: none;
     position: absolute;
     background-color: #475B63;
-    top: 100px;
+    top: 10px;
     left: 10px;
     right: 10px;
     margin: auto;
     box-shadow: 3px 3px black;
     border-radius: 10px;
     border: 2px solid black;
+ }
 
+ #images {
+    display: flex;
+    justify-content: space-around;
+ }
 
+ .img {
+    width: 100px;
+    height: 100px;
+    margin-top: 10px;
+    margin-bottom: 10px;
  }
 
                                         /* Game Area */
@@ -145,9 +157,9 @@ form h2,
 }
 
 .cell {
-    width: 150px;
-    height: 150px;
-    font-size: 7em;
+    width: 100px;
+    height: 100px;
+    font-size: 5em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -189,12 +201,19 @@ by Patricia Nicole Opetina on dev.to */
 .buttons {
     width: auto;
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.buttons1,
+.buttons2 {
+    display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
 
 button {
-    margin: 20px;
+    margin: 10px;
     padding: 10px;
     border-radius: 10px;
     background-color: #E2E6EA;
@@ -209,26 +228,41 @@ button:hover {
     color: #E2E6EA;
 }
 
-button i:hover {                                        /* how to make the image switch colors when the button is hovered, not just the image ?*/
-    color: #E2E6EA;
+#close-instructions-button,
+#close-feedback-button {
+    position: absolute;
+    top: -15px;
+    right: -15px;
+    z-index: 6;
+    border-radius: 50%;
 }
 
-/* Media Query: laptops and larger screens (992px and up)
+/* Media Query: laptops and larger screens (992px and up) */
 @media screen and (min-width: 992px) {
-
-   /*  body {
+    
+    body {
         width: 100vw;
         min-height: 100vh;
-    } 
+    }
 
     section {
-        max-width: 100vw;
-        margin: 10px auto;
+    max-width: 100vw;
+    margin: 10px auto;
+    margin: 20px;
+    padding: 20px;  
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #475B63;
+    color: #E2E6EA;
+    border-radius: 10px;
+    box-shadow: 3px 3px black;
     }   
 
     #board {
         margin: 20px 50px;
-        display: grid;
     }
 
     .cell {
@@ -236,4 +270,10 @@ button i:hover {                                        /* how to make the image
         height: 150px;
         font-size: 7em;
     }
-  }  */
+
+    .buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+  }
